tests/core/snapshots/graphql-basic-query.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": {
        "posts": [
          {
            "id": "post_1",
            "title": "title_1"
          },
          {
            "id": "post_2",
            "title": "title_2"
          }
        ]
      }
    }
  }
}
