tests/core/snapshots/graphql-basic-query.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

interface Node {
  id: ID!
}

scalar PhoneNumber

type Post implements Node {
  body: String!
  id: ID!
  title: String!
}

type PostsConnection {
  posts: [Post]
  totalCount: Int
}

type Query {
  posts: PostsConnection
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
