tests/core/snapshots/graphql-conformance-001.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "city": "Globe",
        "name": "Tailcall"
      }
    }
  }
}
