tests/core/snapshots/graphql-conformance-001.md_5.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Build error: ResolveInputError: Argument `id` for field `user` is required"
      }
    ]
  }
}
